sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: value by is not a member of Int
	for(i <- getNombreValeurs()-2 by -1){
                                      ^